Ensure fast touch on mobile Safari is on

--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Exploded {
@@ -57,6 +58,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Disabled {
@@ -75,6 +77,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexResetButton {
@@ -111,6 +114,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-1 {
@@ -129,6 +133,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-2 {
@@ -147,6 +152,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-3 {
@@ -165,6 +171,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-4 {
@@ -183,6 +190,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-5 {
@@ -201,6 +209,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-6 {
@@ -219,6 +228,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-7 {
@@ -237,6 +247,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-8 {
@@ -255,6 +266,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-9 {
@@ -273,6 +285,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Active-10 {
@@ -291,6 +304,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Enabled-0 {
@@ -309,6 +323,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Enabled-1 {
@@ -327,6 +342,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Enabled-2 {
@@ -345,6 +361,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Enabled-3 {
@@ -363,6 +380,7 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
 
 .indexBox-Enabled-4 {
@@ -381,4 +399,5 @@
     outline: none;
     float: left;
     padding: 0px;
+    touch-action: manipulation;
 }
